    or function, and tells whether that symbol has been defined as
    external C function already.

  - A new proclamation
	(proclaim '(si::c-export-fname union))
    advises the lisp->C translator to produce a C function with
    mangle named (clLunion in this case), that can be directly called
    from other translated files and from user written code.

* Changes to user interface:

  - Remove variable si::*system-directory* and use logical hostname
    "SYS:" instead.

  - Remove *EVALHOOK*, *APPLYHOOK*, #'EVALHOOK and #'APPLYHOOK, which
    make little sense when working in a early compilation environment.

  - Stepper removed until we figure out how to implement this using
    the bytecodes.

  - The library function eval() now accepts an environment as a third
    parameter. On top of this function, SI:EVAL-WITH-ENV, evaluates
    a form on a given environment.

* System design and portability:

  - Code has been revised so that it works in environments where stack
    grows upwards, as well as in environments where the parameters to
    a function cannot be accessed as an array and only va_list/va_arg
    work.

  - Implement loading of object files using the native "dlopen"
    function which is present in most operating systems. Support for
    "dld" has been dropped and the whole of the CRS library has been
    removed

  - Remove use of alloca() when printing circular structures.


TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.

* #'unread-char does not fail when the character differs from the
  original one.

* vector-push-extend may succeed even if the vector is not
  adjustable. Should we be more strict?

* should we relax ASSOC? (See lists156.tst)

* boost setf and generalized places -- the current implementation is
  extremely faulty with respect to the standards.
